# pathtools

./: CMakeLists.txt  LICENSE
strmanip/: strmanip.cpp  strmanip.hpp
touch/: touch.cpp  touch.hpp
